[tool.poetry]
name = "sqlnet-predict"
version = "0.1.0"
description = "This repo provides an implementation of SQLNet and Seq2SQL neural networks for predicting SQL queries on [WikiSQL dataset](https://github.com/salesforce/WikiSQL). The paper is available at [here](https://arxiv.org/abs/1711.04436)."
authors = ["Your Name <you@example.com>"]
license = "BSD-3-Clause license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Babel = "^2.5.1"
docopt = "^0.6.2"
et-xmlfile = "^1.0.1"
jdcal = "^1.3"
odfpy = "^1.3.5"
openpyxl = "^2.4.9"
pytz = "^2017.3"
records = "^0.5.2"
SQLAlchemy = "^1.1.14"
tablib = "^0.12.1"
unicodecsv = "^0.14.1"
xlrd = "^1.1.0"
xlwt = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
packages = ["sqlnet_predict"]